# BudgetApp2.0

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: check_and_test.yml  checks.yml  linting.yml  testing.yml
budget-app/: app.py  check_all.sh  pyproject.toml  test.py
budget-app/core/: account_panel.py  data_manager.py  overview_panel.py  settings_panel.py  stuff.py  transactions_panel.py
budget-app/core/utils/: category_settings.py  dialogbox.py  dropdown_list.py  dummy_data.py  subcategory_settings.py  utils.py  validator.py
budget-app/tests/: conftest.py  test_account_page.py  test_data_manager.py  test_utils.py  test_validators.py
